instant-search-demo/rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  namespace: instant-search-demo
spec:
  replicas: 2
  strategy:
    canary:
      canaryService: instant-search-demo-next-svc
      stableService: instant-search-demo-svc
      trafficRouting:
        nginx:
          stableIngress: instant-search-demo-ingress
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 40
        - pause: {duration: 10}
        - setWeight: 60
        - pause: {duration: 10}
        - setWeight: 80
        - pause: {duration: 10}
