instant-search-demo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: instant-search-demo-svc
spec:
  selector:
    app: instant-search-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: instant-search-demo-next-svc
spec:
  selector:
    app: instant-search-demo-next
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
